StructureStubInfo::reset() causes leaks of PolymorphicAccessStructureList and ExecutableMemoryHandle objects https://bugs.webkit.org/show_bug.cgi?id=83823

Reviewed by Gavin Barraclough.

Put the clearing of the accessType to after the call to deref() so that
deref() can use the accessType to delete referenced objects as needed.

* bytecode/StructureStubInfo.h:
(JSC::StructureStubInfo::reset):


Canonical link: https://commits.webkit.org/101343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114052 268f45cc-cd09-0410-ab3c-d52691b4dbfc